| Summary: | ASTERISK-29753: parking: Fix for Doxygen | ||
| Reporter: | Alexander Traud (traud) | Labels: | |
| Date Opened: | 2021-11-17 02:58:04.000-0600 | Date Closed: | 2021-11-18 16:25:26.000-0600 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Documentation Resources/res_parking |
| Versions: | 16.22.0 18.8.0 19.0.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | If all {{WARN_}} are enabled in the file {{doc/asterisk-ng-doxygen.in}}, the following appears in the file {{doxygen.log}}:
{code} include/asterisk/parking.h:238: warning: unable to resolve reference to 'bridge_channel' for \ref command include/asterisk/parking.h:245: warning: unable to resolve reference to 'parker' for \ref command main/parking.c:143: warning: argument 'exten' from the argument list of ast_parking_blind_transfer_park has multiple @param documentation sections include/asterisk/parking.h:286: warning: argument 'The' of command @param is not found in the argument list of ast_parking_unregister_bridge_features(const char *module_name) main/parking.c:223: warning: The following parameter of ast_parking_unregister_bridge_features(const char *module_name) is not documented: parameter 'module_name' include/asterisk/parking.h:238: warning: unable to resolve reference to 'bridge_channel' for \ref command include/asterisk/parking.h:245: warning: unable to resolve reference to 'parker' for \ref command include/asterisk/parking.h:253: warning: argument 'exten' from the argument list of ast_parking_blind_transfer_park has multiple @param documentation sections include/asterisk/parking.h:286: warning: argument 'The' of command @param is not found in the argument list of ast_parking_unregister_bridge_features(const char *module_name) include/asterisk/parking.h:291: warning: The following parameter of ast_parking_unregister_bridge_features(const char *module_name) is not documented: parameter 'module_name' res/parking/parking_applications.c:746: warning: documented empty return type of inherit_channel_vars_from_id res/parking/parking_bridge.c:54: warning: documented empty return type of bridge_parking_destroy res/parking/parking_bridge.c:418: warning: documented empty return type of bridge_parking_notify_masquerade res/parking/parking_bridge.c:342: warning: documented empty return type of bridge_parking_pull res/parking/parking_bridge.c:90: warning: argument 'parkee' of command @param is not found in the argument list of generate_parked_user(struct parking_lot *lot, struct ast_channel *chan, const char *parker_channel_name, const char *parker_dial_string, int use_random_space, int time_limit) res/parking/parking_bridge.c:109: warning: The following parameter of generate_parked_user(struct parking_lot *lot, struct ast_channel *chan, const char *parker_channel_name, const char *parker_dial_string, int use_random_space, int time_limit) is not documented: parameter 'chan' res/parking/parking_bridge_features.c:323: warning: unable to resolve reference to 'bridge_channel' for \ref command res/parking/parking_bridge_features.c:493: warning: unable to resolve reference to 'parker' for \ref command res/parking/parking_bridge_features.c:542: warning: documented empty return type of parking_timeout_set_caller_features res/parking/res_parking.h:336: warning: argument 'peername' of command @param is not found in the argument list of flatten_dial_string(char *dialstring) res/parking/parking_controller.c:249: warning: The following parameter of flatten_dial_string(char *dialstring) is not documented: parameter 'dialstring' res/parking/parking_tests.c:838: warning: documented empty return type of unload_parking_tests include/asterisk/phoneprov.h:96: warning: argument 'defaults' of command @param is not found in the argument list of ast_phoneprov_add_extension(char *provider_name, struct varshead *vars) res/parking/res_parking.h:336: warning: argument 'peername' of command @param is not found in the argument list of flatten_dial_string(char *dialstring) res/parking/res_parking.h:341: warning: The following parameter of flatten_dial_string(char *dialstring) is not documented: parameter 'dialstring' res/parking/res_parking.h:579: warning: documented empty return type of unload_parking_tests include/asterisk/parking.h:167: warning: unable to resolve reference to 'bridge_channel' for \ref command include/asterisk/parking.h:173: warning: unable to resolve reference to 'parker' for \ref command {code} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-11-17 02:58:06.399-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2021-11-18 16:25:26.952-0600 Change 17525 merged by Friendly Automation: parking: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17525|https://gerrit.asterisk.org/c/asterisk/+/17525] By: Friendly Automation (friendly-automation) 2021-11-18 16:45:54.992-0600 Change 17524 merged by Friendly Automation: parking: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17524|https://gerrit.asterisk.org/c/asterisk/+/17524] By: Friendly Automation (friendly-automation) 2021-11-18 16:59:33.322-0600 Change 17504 merged by Kevin Harwell: parking: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17504|https://gerrit.asterisk.org/c/asterisk/+/17504] By: Friendly Automation (friendly-automation) 2021-11-18 16:59:51.246-0600 Change 17526 merged by Kevin Harwell: parking: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17526|https://gerrit.asterisk.org/c/asterisk/+/17526] | ||