parking: Fix for Doxygen.

ASTERISK-29753

Change-Id: I7a61974584f6169502e6860fc711919fe7bbfaa7